WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84645
Call instruction for the baseline JIT stores origin info in wrong callframe
https://bugs.webkit.org/show_bug.cgi?id=84645
Summary
Call instruction for the baseline JIT stores origin info in wrong callframe
Oliver Hunt
Reported
2012-04-23 15:58:27 PDT
Call instruction for the baseline JIT stores origin info in wrong callframe
Attachments
Patch
(4.51 KB, patch)
2012-04-23 16:03 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2012-04-23 16:03:01 PDT
Created
attachment 138449
[details]
Patch
Oliver Hunt
Comment 2
2012-04-23 16:07:55 PDT
Committed
r114959
: <
http://trac.webkit.org/changeset/114959
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug