Call instruction for the baseline JIT stores origin info in wrong callframe https://bugs.webkit.org/show_bug.cgi?id=84645

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

The baseline JIT was updating the wrong callframe when making a call.  If the
call failed during dispatch (unable to perform codegen, calling a non-object)
we would attempt to use this information, but it would be completely wrong.

* jit/JITCall.cpp:
(JSC::JIT::compileOpCall):
* jit/JITCall32_64.cpp:
(JSC::JIT::compileOpCall):

LayoutTests:

Directly force LLInt, Baseline, and DFG JITs to handle the path where
a call fails during dispatch.

* fast/js/script-tests/stack-trace.js:
(callNonCallable):

Canonical link: https://commits.webkit.org/102127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114959 268f45cc-cd09-0410-ab3c-d52691b4dbfc